--- a/sources/Angular_UI/src/app/modules/module-one/component-one/component-one.component.html
+++ b/sources/Angular_UI/src/app/modules/module-one/component-one/component-one.component.html
@@ -3,6 +3,7 @@
   fxLayout="row"
   fxLayout.lt-md="column"
   fxLayoutAlign="center stretch"
+  *ngIf="!evaluateComplete"
 >
   <button
     fxFlex="30%"
@@ -13,4 +14,59 @@
   >
     Add Data to Predict
   </button>
+</div>
+
+<div class="wrapper" *ngIf="evaluateComplete">
+  <div>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title> General Results </mat-panel-title>
+        <mat-panel-description>
+          Accuracy, confusion matrix
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <ng-template matExpansionPanelContent>
+        <mat-card fxLayout="row" fxLayout.lt-md="column">
+          <mat-form-field fxFlex>
+            <mat-label>Accuracy</mat-label>
+            <input matInput [value]="evaluateResponse?.testResult?.accuracy" />
+          </mat-form-field>
+        </mat-card>
+        <mat-card>
+          <div class="responsive-table mat-elevation-z8">
+            <table class="tableLayout" mat-table matSort [dataSource]="dataSource">
+                <ng-container matColumnDef="type">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
+                  <td mat-cell *matCellDef="let row" data-label="Type"> {{row.type}} </td>
+                </ng-container>
+            
+                <ng-container matColumnDef="truePositives">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> True Positives </th>
+                    <td mat-cell *matCellDef="let row" data-label="True Positives"> {{row.truePositives}} </td>
+                </ng-container>
+            
+                <ng-container matColumnDef="falseNegatives">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> False Negatives </th>
+                    <td mat-cell *matCellDef="let row" data-label="False Negatives"> {{row.falseNegatives}} </td>
+                </ng-container>
+            
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
+        </mat-card>
+      </ng-template>
+    </mat-expansion-panel>
+  </div>
+  <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center stretch">
+    <button
+      fxFlex="30%"
+      fxFlex.lt-md
+      mat-raised-button
+      color="primary"
+      (click)="evaluateComplete = false; openUploadDialog()"
+    >
+      Try another dataset
+    </button>
+  </div>
 </div>
