--- a/sources/Angular_UI/src/app/modules/module-one/component-one/component-one.component.scss
+++ b/sources/Angular_UI/src/app/modules/module-one/component-one/component-one.component.scss
@@ -1,3 +1,7 @@
+@import '../../../shared/styles/responsive-table';
+
 .wrapper {
     margin-top: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
 }
