Disabled accuracy input
Co-Authored-By: andreeac27 <69468694+andreeac27@users.noreply.github.com>
Co-Authored-By: criscojocaru <40690927+criscojocaru@users.noreply.github.com>
Co-Authored-By: paulbenge <63068592+paulbenge@users.noreply.github.com>
Co-Authored-By: Ioana Raluca Petrescu <44580296+ralucapetrescu@users.noreply.github.com>

--- a/sources/Angular_UI/src/app/modules/module-one/component-one/component-one.component.html
+++ b/sources/Angular_UI/src/app/modules/module-one/component-one/component-one.component.html
@@ -29,7 +29,7 @@
         <mat-card fxLayout="row" fxLayout.lt-md="column">
           <mat-form-field fxFlex>
             <mat-label>Accuracy</mat-label>
-            <input matInput [value]="evaluateResponse?.testResult?.accuracy" />
+            <input matInput [value]="evaluateResponse?.testResult?.accuracy" disabled/>
           </mat-form-field>
         </mat-card>
         <mat-card>
