--- a/sources/Angular_UI/src/app/modules/module-one/component-one/component-one.component.html
+++ b/sources/Angular_UI/src/app/modules/module-one/component-one/component-one.component.html
@@ -18,45 +18,152 @@
 
 <div class="wrapper" *ngIf="evaluateComplete">
   <div>
-    <mat-expansion-panel>
-      <mat-expansion-panel-header>
-        <mat-panel-title> General Results </mat-panel-title>
-        <mat-panel-description>
-          Accuracy, confusion matrix
-        </mat-panel-description>
-      </mat-expansion-panel-header>
-      <ng-template matExpansionPanelContent>
-        <mat-card fxLayout="row" fxLayout.lt-md="column">
-          <mat-form-field fxFlex>
-            <mat-label>Accuracy</mat-label>
-            <input matInput [value]="evaluateResponse?.testResult?.accuracy" disabled/>
-          </mat-form-field>
-        </mat-card>
-        <mat-card>
-          <div class="responsive-table mat-elevation-z8">
-            <table class="tableLayout" mat-table matSort [dataSource]="dataSource">
+    <mat-accordion multi>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title> General Results </mat-panel-title>
+          <mat-panel-description>
+            Accuracy, confusion matrix
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <ng-template matExpansionPanelContent>
+          <mat-card fxLayout="row" fxLayout.lt-md="column">
+            <mat-form-field fxFlex>
+              <mat-label>Accuracy</mat-label>
+              <input
+                matInput
+                [value]="evaluateResponse?.testResult?.accuracy"
+                disabled
+              />
+            </mat-form-field>
+          </mat-card>
+          <mat-card>
+            <div class="responsive-table mat-elevation-z8">
+              <table
+                class="tableLayout"
+                mat-table
+                matSort
+                [dataSource]="dataSourceGeneral"
+              >
                 <ng-container matColumnDef="type">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
-                  <td mat-cell *matCellDef="let row" data-label="Type"> {{row.type}} </td>
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Type
+                  </th>
+                  <td mat-cell *matCellDef="let row" data-label="Type">
+                    {{ row.type }}
+                  </td>
                 </ng-container>
-            
+
                 <ng-container matColumnDef="truePositives">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> True Positives </th>
-                    <td mat-cell *matCellDef="let row" data-label="True Positives"> {{row.truePositives}} </td>
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    True Positives
+                  </th>
+                  <td
+                    mat-cell
+                    *matCellDef="let row"
+                    data-label="True Positives"
+                  >
+                    {{ row.truePositives }}
+                  </td>
                 </ng-container>
-            
+
                 <ng-container matColumnDef="falseNegatives">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> False Negatives </th>
-                    <td mat-cell *matCellDef="let row" data-label="False Negatives"> {{row.falseNegatives}} </td>
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    False Negatives
+                  </th>
+                  <td
+                    mat-cell
+                    *matCellDef="let row"
+                    data-label="False Negatives"
+                  >
+                    {{ row.falseNegatives }}
+                  </td>
                 </ng-container>
-            
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-        </div>
-        </mat-card>
-      </ng-template>
-    </mat-expansion-panel>
+
+                <tr
+                  mat-header-row
+                  *matHeaderRowDef="displayedColumnsGeneral"
+                ></tr>
+                <tr
+                  mat-row
+                  *matRowDef="let row; columns: displayedColumnsGeneral"
+                ></tr>
+              </table>
+            </div>
+          </mat-card>
+        </ng-template>
+      </mat-expansion-panel>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title> Specific Results </mat-panel-title>
+          <mat-panel-description> Accuracy, Precision, Recall, F1 </mat-panel-description>
+        </mat-expansion-panel-header>
+        <ng-template matExpansionPanelContent>
+          <mat-card>
+            <div class="responsive-table mat-elevation-z8">
+              <table
+                class="tableLayout"
+                mat-table
+                matSort
+                [dataSource]="dataSourceSpecific"
+              >
+                <ng-container matColumnDef="type">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Type
+                  </th>
+                  <td mat-cell *matCellDef="let row" data-label="Type">
+                    {{ row.type }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="accuracy">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Accuracy
+                  </th>
+                  <td mat-cell *matCellDef="let row" data-label="Accuracy">
+                    {{ row.accuracy }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="precision">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Precision
+                  </th>
+                  <td mat-cell *matCellDef="let row" data-label="Precision">
+                    {{ row.precision }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="recall">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Recall
+                  </th>
+                  <td mat-cell *matCellDef="let row" data-label="Recall">
+                    {{ row.recall }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="f1">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>F1</th>
+                  <td mat-cell *matCellDef="let row" data-label="F1">
+                    {{ row.f1 }}
+                  </td>
+                </ng-container>
+
+                <tr
+                  mat-header-row
+                  *matHeaderRowDef="displayedColumnsSpecific"
+                ></tr>
+                <tr
+                  mat-row
+                  *matRowDef="let row; columns: displayedColumnsSpecific"
+                ></tr>
+              </table>
+            </div>
+          </mat-card>
+        </ng-template>
+      </mat-expansion-panel>
+    </mat-accordion>
   </div>
   <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center stretch">
     <button
