Added predictions table; Fixed sorting for all tables
Co-Authored-By: andreeac27 <69468694+andreeac27@users.noreply.github.com>
Co-Authored-By: criscojocaru <40690927+criscojocaru@users.noreply.github.com>
Co-Authored-By: paulbenge <63068592+paulbenge@users.noreply.github.com>
Co-Authored-By: Ioana Raluca Petrescu <44580296+ralucapetrescu@users.noreply.github.com>

--- a/sources/Angular_UI/src/app/modules/module-one/component-one/component-one.component.scss
+++ b/sources/Angular_UI/src/app/modules/module-one/component-one/component-one.component.scss
@@ -1,11 +1,16 @@
-@import '../../../shared/styles/responsive-table';
+@import "../../../shared/styles/responsive-table";
 
 .wrapper {
-    margin-top: 20px;
-    margin-left: 5%;
-    margin-right: 5%;
+  margin-top: 20px;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 mat-card {
-    margin: 5px;
+  margin: 5px;
+}
+
+.scroll-container {
+  max-height: 500px;
+  overflow: auto;
 }
