--- a/sources/Angular_UI/src/app/modules/module-one/component-one/component-one.component.html
+++ b/sources/Angular_UI/src/app/modules/module-one/component-one/component-one.component.html
@@ -16,7 +16,7 @@
   </button>
 </div>
 
-<div class="wrapper" *ngIf="evaluateComplete">
+<div class="wrapper" *ngIf="evaluateComplete" fxLayout="column" fxLayoutGap="5px">
   <div>
     <mat-accordion multi>
       <mat-expansion-panel>
@@ -42,6 +42,7 @@
               <table
                 class="tableLayout"
                 mat-table
+                #genSort="matSort"
                 matSort
                 [dataSource]="dataSourceGeneral"
               >
@@ -104,6 +105,7 @@
               <table
                 class="tableLayout"
                 mat-table
+                #specSort="matSort"
                 matSort
                 [dataSource]="dataSourceSpecific"
               >
@@ -157,6 +159,70 @@
                 <tr
                   mat-row
                   *matRowDef="let row; columns: displayedColumnsSpecific"
+                ></tr>
+              </table>
+            </div>
+          </mat-card>
+        </ng-template>
+      </mat-expansion-panel>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title> Dataset Results </mat-panel-title>
+          <mat-panel-description> Prediction, Probability </mat-panel-description>
+        </mat-expansion-panel-header>
+        <ng-template matExpansionPanelContent>
+          <mat-card>
+            <div class="responsive-table mat-elevation-z8 scroll-container">
+              <table
+                class="tableLayout"
+                mat-table
+                #resSort="matSort"
+                matSort
+                [dataSource]="dataSourcePrediction"
+              >
+                <ng-container matColumnDef="age">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Age
+                  </th>
+                  <td mat-cell *matCellDef="let row" data-label="Age">
+                    {{ row.age }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="gender">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Gender
+                  </th>
+                  <td mat-cell *matCellDef="let row" data-label="Gender">
+                    {{ row.gender }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="prediction">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Prediction
+                  </th>
+                  <td mat-cell *matCellDef="let row" data-label="Prediction">
+                    {{ row.prediction }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="probability">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Probability
+                  </th>
+                  <td mat-cell *matCellDef="let row" data-label="Probability">
+                    {{ row.probability }}
+                  </td>
+                </ng-container>
+
+                <tr
+                  mat-header-row
+                  *matHeaderRowDef="displayedColumnsPrediction"
+                ></tr>
+                <tr
+                  mat-row
+                  *matRowDef="let row; columns: displayedColumnsPrediction"
                 ></tr>
               </table>
             </div>
